zeromq/easy_install_pyzmq.log
# easy_install pyzmq

Searching for pyzmq
Reading https://pypi.python.org/simple/pyzmq/
Best match: pyzmq 15.2.0
Downloading https://pypi.python.org/packages/2.7/p/pyzmq/pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg#md5=882f869d106093de6b689f58640385fa
Processing pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg
creating /Library/Python/2.7/site-packages/pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg
Extracting pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg to /Library/Python/2.7/site-packages
  File "/Library/Python/2.7/site-packages/pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg/zmq/asyncio.py", line 79
    "{!r}".format(fileobj)) from None
                               ^
SyntaxError: invalid syntax

  File "/Library/Python/2.7/site-packages/pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg/zmq/auth/asyncio.py", line 28
    events = yield from self.__poller.poll()
                      ^
SyntaxError: invalid syntax

  File "/Library/Python/2.7/site-packages/pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg/zmq/tests/_test_asyncio.py", line 43
    yield from a.send(b'hi')
             ^
SyntaxError: invalid syntax

Adding pyzmq 15.2.0 to easy-install.pth file

Installed /Library/Python/2.7/site-packages/pyzmq-15.2.0-py2.7-macosx-10.6-intel.egg
Processing dependencies for pyzmq
Finished processing dependencies for pyzmq

